docs_theme/assets/theme.css
/* ------------------------------------------------------------ */
/* Overrides for jrnl theme                                     */
/* ------------------------------------------------------------ */

:root {
  --sidebar: #604385;
  --sidebar-dark: #604385;
  --off-white: rgba(255, 255, 255, .7);
}

body.wy-body-for-nav,
section.wy-nav-content-wrap {
  background-color: rgb(252, 252, 252);
}

pre {
  background-color: transparent;
  border: none;
  margin: 1em -1em;
}

pre code {
  padding: 1em 1.5em !important;
}

code {
  background-color: transparent;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Open Sans", "Helvetica Neue", Helvetica, sans-serif;
  font-weight: 600;
  margin-top: 2rem;
  margin-bottom: 0.2rem;
}

h2 {
  font-size: 1.2em;
  margin-top: 40px;
}

p,
td,
tr,
div,
li {
  font-family: "Open Sans", "Helvetica Neue", Helvetica, sans-serif;
  font-weight: 00;
  font-size: 18px;
  line-height: 1.5em;
}

p {
  margin: 1em 0em;
}

/* No-one likes lines that are 400 characters long. */
div.rst-content {
  max-width: 54em;
}

.wy-side-nav-search,
.wy-menu-vertical li.current {
  background-color: transparent;
}

.wy-nav-top {
  background-image: linear-gradient(-211deg, #95699C 0%, #604385 100%);
}

.wy-nav-top .fa-bars {
  line-height: 50px;
}

.wy-side-nav-search a.icon-home {
  width: 100%;
  max-width: 250px;
  background-size: 100%;
}

a.icon-home:before {
  display: block;
  width: 84px;
  height: 70px;
  content: "";
  background: url(../img/logo_white.svg) center center no-repeat;
  margin: 10px auto;
}

.wy-menu-vertical a,
.wy-menu-vertical li ul li a {
  color: var(--off-white) !important;
}

.wy-menu-vertical a:hover,
.wy-menu-vertical li.current a:hover {
  background-color: transparent !important;
  color: white !important;
}

.wy-menu-vertical li.on a,
.wy-menu-vertical li.current>a {
  background: transparent;
   !important;
  color: white !important;
  border: none;
  position: relative;
  font-weight: 700 !important;
  border-right: none !important;
}

.wy-menu-vertical li.on a,
.wy-menu-vertical li.current a {
  border-right: none;
}

.wy-menu-vertical li.on a,
.wy-menu-vertical li.current>a:after {
  display: block;
  position: absolute;
  right: 0em;
  top: 0;
  z-index: 999 !important;
  content: "";
  width: 0;
  height: 0;
  border-top: 1em solid transparent;
  border-bottom: 1em solid transparent;
  border-right: 1em solid white;
}

.rst-versions,
.rst-versions .rst-current-version {
  display: none;
}

.wy-menu-vertical span {
  color: white !important;
  font-size: 1.2em;
  font-weight: 300 !important;
}

.wy-menu-vertical li a {
  color: var(--off-white) !important;
  font-weight: 300 !important;
}


.wy-nav-side {
  background-image: linear-gradient(211deg, #95699C 0%, #604385 100%);
  font-weight: 300 !important;
  height: 100%;
}


footer {
  display: none;
}

.wy-side-nav-search input[type=text],
form .search-query {
  background-color: rgba(0, 0, 0, .1) !important;
  border: 1px solid rgba(255, 255, 255, .3);
  box-shadow: none;
  margin-bottom: 1em;
  color: white !important;
  font-weight: 500;
}

.wy-side-nav-search input[type=text]::placeholder,
form .search-query::placeholder {
  color: var(--off-white) !important;
}

.toctree-l2 a:first-child {
  display: none;
}

/* ------------------------------------------------------------ */
/* Logo: ;                                                      */
/* ------------------------------------------------------------ */

.logo {
  width: 128px;
  height: 128px;
  vertical-align: middle;
  margin-right: 1em;
}

/* ------------------------------------------------------------ */
/* Code blocks in callouts                                      */
/* ------------------------------------------------------------ */

div.admonition {
  border-radius: 5px;
  margin: 1em -1em;
}

div.admonition p.admonition-title {
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
}

div.admonition>p {
  padding: 0em .5em;
}


div.admonition div.highlight {
  background: none !important;
}

div.admonition div.highlight pre {
  background-color: rgba(255, 255, 255, .5) !important;
}

/* ------------------------------------------------------------ */
/* Fancy ordered lists.                                         */
/* ------------------------------------------------------------ */

ol {
  counter-reset: li;
  margin-left: 0px;
  padding: 0;
}

ol li {
  list-style: none !important;
  margin-bottom: 1.5em;
  margin-left: 3em !important;
}

ol>li:before {
  content: counter(li);
  counter-increment: li;
  background-color: var(--sidebar);
  border-radius: 50%;
  display: block;
  float: left;
  margin-left: -3em;
  margin-top: -.3em;
  width: 2em;
  height: 2em;
  color: var(--sidebar-dark);
  text-align: center;
  line-height: 2em;
  font-weight: 600;
}


/* ------------------------------------------------------------ */
/* Accessibility-related changes                                */
/* ------------------------------------------------------------ */
.rst-content div[role="main"] a,
.rst-content div[role="main"] a:visited {
  color: #9a5b96;
  text-decoration: underline;
}

.rst-content div[role="main"]  a:hover {
  color: #af27ad;
}

.rst-content div[role="navigation"] a,
.rst-content div[role="navigation"] a:visited {
  color: #9a5b96;
}

.rst-content code {
  color: #D83D2D;
}

.mkdocs-search {
  display: flex;
}

.wy-side-nav-search input[type="text"] {
  border-radius: 50px 0 0 50px;
  height: 32px;
  border-right: none;
}

.mkdocs-search button {
  background-color: rgba(0, 0, 0, .1);
  border: 1px solid rgba(255, 255, 255, .3);
  border-left: none;
  box-shadow: none;
  color: white;
  border-radius: 0 50px 50px 0;
  height: 32px;
  width: 2.5em;
  overflow: hidden;
}

